fix: spacing social icons

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -15,7 +15,7 @@
   }
   
   .social-icon {
-    margin-right: 10px;
+    padding: 15px;
     a {
       text-decoration: none;
       img {
@@ -24,7 +24,8 @@
       &:hover {
         text-decoration: none;
         img {
-          opacity: 0.7;
+          filter: brightness(0) invert(1);
+          opacity: 0.9;
         }
       }
     }
